correction mobile menu

--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -8,4 +8,5 @@
 
 //navigation parametrs
 @basic-nav-width: 300px;
-@nav-wraper-padding: 10px;
+@mobile-nav-width: 350px;
+@nav-elem-padding: 10px;
