--- a/source/less/main-blocks/header.less
+++ b/source/less/main-blocks/header.less
@@ -12,8 +12,12 @@
       & .header__menu-btn {
         position: absolute;
         top: 20px;
-        right: 10px;
-        z-index: 1;
+        left: 10px;
+        z-index: 2;
+        transition: all 1s ease-in-out;
+
+        animation-duration: 1s;
+        animation-name: show-mobile-btn;
       }
     }
   }
@@ -164,4 +168,10 @@
   &:hover {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='96.943' height='96.943' style='enable-background:new 0 0 96.943 96.943' xml:space='preserve'%3E%3Cpath d='M61.168 83.92H11.364V13.025H61.17a2 2 0 0 0 2-2V3.66a2 2 0 0 0-2-2H2a2 2 0 0 0-2 2v89.623a2 2 0 0 0 2 2h59.168a2 2 0 0 0 2-2V85.92c0-1.106-.894-2-2-2z' fill='%23f73859'/%3E%3Cpath d='m96.355 47.058-26.922-26.92c-.75-.751-2.078-.75-2.828 0l-6.387 6.388a2 2 0 0 0 0 2.828l12.16 12.162H19.737a2 2 0 0 0-2 2v9.912a2 2 0 0 0 2 2h52.644L60.221 67.59a2 2 0 0 0 0 2.828l6.387 6.389a2.002 2.002 0 0 0 2.828 0l26.922-26.92c.375-.375.586-.885.586-1.414a2.007 2.007 0 0 0-.589-1.415z' fill='%23f73859'/%3E%3C/svg%3E");
   }
+}
+
+@keyframes show-mobile-btn {
+  0% { opacity: 0; }
+  80%  { opacity: 0; }
+  100% { opacity: 1; }
 }
