--- a/source/less/main-blocks/navigation.less
+++ b/source/less/main-blocks/navigation.less
@@ -4,6 +4,7 @@
   grid-area: nav;
   overflow-y: auto;
   position: relative;
+  z-index: 1;
 
   -ms-overflow-style: none; /* IE 11 */
   scrollbar-width: none; /* Firefox 64 */
@@ -15,6 +16,12 @@
   &::-moz-scrollbar {
     width: 0px;
   }
+
+  @media (max-width: @tablet-width) {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
 }
 
 .open {
@@ -22,20 +29,19 @@
     width: @basic-nav-width;
     transform: translateX(0%);
     transition: transform 1s ease, width 1s ease;
+
+    @media (max-width: @tablet-width) {
+      width: @mobile-nav-width;
+    }
   }
 
   @media (max-width: @tablet-width) {
-    position: absolute;
-    top: 0;
-    left: 0;
-
     width: 100%;
     background-color: var(--menu-mobile-bg-color);
   }
 }
 
 .navigation__Wrap {
-  padding: @nav-wraper-padding;
   width: 0px;
   transform: translateX(-100%);
   overflow-x: hidden;
@@ -43,30 +49,47 @@
 
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
+  justify-content: start;
+  align-items: flex-start;
   gap: 20px;
+
+  @media (max-width: @tablet-width) {
+    background-color: var(--menu-mobile-bg-color);
+  }
 }
 
 .navigation__logo {
-  width: 100%;
-  min-width: @basic-nav-width - (@nav-wraper-padding * 2);
+  align-self: center;
+  padding: @nav-elem-padding 0 0 0;
+  min-width: @basic-nav-width;
   height: min-content;
   object-fit: contain;
+
+  @media (max-width: @tablet-width) {
+    width: 150px;
+    height: 100px;
+    align-self: flex-end;
+  }
 }
 
 .navigation__list {
-  min-width: @basic-nav-width - (@nav-wraper-padding * 2);
-  width: 100%;
+  min-width: @basic-nav-width;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: start;
   gap: 10px;
+  padding-left: @nav-elem-padding;
   padding-bottom: 20px;
 
   list-style: none;
+
+  @media (max-width: @tablet-width) {
+    width: 100%;
+    padding-left: 70px;
+  }
 }
+
 .navigation__title {
   font-family: 'Open Sans', sans-serif;
   font-size: 18px;
@@ -162,10 +185,4 @@
   height: 30px;
   border-radius: 5px;
   box-shadow: var(--shadow);
-}
-
-@keyframes link-line {
-  0% {width: 0%;}
-  100% { width: 85%; }
-  100% {width: 85%;}
 }
